--- a/assets/CSS/mediaQueries.css
+++ b/assets/CSS/mediaQueries.css
@@ -1,9 +1,11 @@
+
+
+/* EXTRA MEDIA QUERY TEMPS IF NEEDED */
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
 } 
-
-
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -12,16 +14,10 @@
 } 
 
 
-
-
-
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
 
 } 
-
-
-
 
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -30,16 +26,10 @@
     
 } 
 
-
-
-
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     
 }
-
-
-
 /* devices (landscape tablets, 1400px and up) */
 @media only screen and (min-width: 1400px) {
 
